# ray_tracing

./: CMakeLists.txt
CMake/: add_lib.cmake
cmake/: add_lib.cmake
include/Hittables/: Hittable.h  HittableList.h  Hittables.h  Sphere.h
include/Materials/: Dielectric.h  Lambertian.h  Material.h  Materials.h  Metal.h
include/core/: Camera.h  HitRecord.h  Interval.h  Math.h  Ray.h
src/: CMakeLists.txt  Camera.cc  Camera.h  Color.h  Hittable.h  HittableList.cc  HittableList.h  Interval.cc  Interval.h  Math.h  Ray.cc  Ray.h  Renderer.h  Sphere.cc  Sphere.h  main.cc
src/Hittables/: CMakeLists.txt  HittableList.cc  Sphere.cc
src/Materials/: CMakeLists.txt  Dielectric.cc  Lambertian.cc  Material.h  Metal.cc  Metal.h
src/core/: CMakeLists.txt  Camera.cc  Interval.cc  Ray.cc
